<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">


    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/icon_password"
        android:drawablePadding="@dimen/margin_10dp"
        android:hint="@string/hint_password"
        android:inputType="number"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:paddingTop="@dimen/margin_15dp"
        android:paddingBottom="@dimen/margin_15dp"
        android:paddingStart="@dimen/margin_23dp"
        android:visibility="visible"
        android:background="@drawable/bg_login_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/login_service_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="@dimen/sp_16"
        android:gravity="center"
        android:enabled="false"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_31dp"
        android:paddingTop="@dimen/margin_15dp"
        android:paddingBottom="@dimen/margin_15dp"
        android:paddingStart="@dimen/margin_23dp"
        android:background="@drawable/bg_un_login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password"/>

    <TextView
        android:id="@+id/login_mode_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_phone"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:padding="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@id/login_service_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/line_login"
        android:layout_width="@dimen/margin_1dp"
        android:layout_height="@dimen/margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/line_grey"
        android:layout_marginTop="@dimen/margin_22dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/login_service_btn"/>

    <TextView
        android:id="@+id/login_service_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/login_service_btn"
        app:layout_constraintStart_toEndOf="@id/line_login"/>



</androidx.constraintlayout.widget.ConstraintLayout>