<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_identify_exceptions"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/warning_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_26dp"
        android:src="@mipmap/warning_fill"/>

    <TextView
        android:id="@+id/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:textStyle="bold"
        android:textSize="@dimen/sp_17"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warning_fill"/>

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_identify_exceptions"
        android:textSize="@dimen/sp_15"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reminder"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_24dp"
        android:background="@color/line"
        app:layout_constraintTop_toBottomOf="@id/txt_content" />

    <TextView
        android:id="@+id/sure"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_50dp"
        android:text="@string/sure"
        android:textSize="@dimen/sp_17"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/sure_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"/>

</androidx.constraintlayout.widget.ConstraintLayout>