<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.uwei.uwproject.bean.UserBean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.login.mvvm.Login2Activity">

        <EditText
            android:id="@+id/login_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon_phone_number"
            android:drawablePadding="@dimen/margin_10dp"
            android:hint="@string/hint_phone"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:paddingTop="@dimen/margin_15dp"
            android:paddingBottom="@dimen/margin_15dp"
            android:paddingStart="@dimen/margin_23dp"
            android:inputType="phone"
            android:text="10"
            android:background="@drawable/bg_login_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hello_content" />


        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon_password"
            android:drawablePadding="@dimen/margin_10dp"
            android:hint="@string/hint_password"
            android:inputType="number"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:paddingTop="@dimen/margin_15dp"
            android:paddingBottom="@dimen/margin_15dp"
            android:paddingStart="@dimen/margin_23dp"
            android:visibility="visible"
            android:background="@drawable/bg_login_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/login_service_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="@dimen/sp_16"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_31dp"
            android:paddingTop="@dimen/margin_15dp"
            android:paddingBottom="@dimen/margin_15dp"
            android:paddingStart="@dimen/margin_23dp"
            android:background="@drawable/bg_login_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password" />

        <TextView
            android:id="@+id/login_mode_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.name}"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:padding="@dimen/margin_10dp"
            android:background="@color/black"/>

    </LinearLayout>
</layout>